7. Forums are now compatible with SMTP mailing lists.. including very simple threading.  If performance is good, why not move Yahoo groups to one?  
8. When using account system, account creation proceeds directly to new character creation.
9. I3/Intermud3 now supports finger (through WHOIS), and will auto-restart if pinging the router is no longer responsive after an hour.
10.MUDGrinder now has a Ability Components editor
11.Can now delete a journal entirely from the MUDGrinder; also Clan Journals should clear out correctly when Clans are deleted.
12.Can now DISABLE the Java-coded races or classes from the DISABLE entry in the INI file.  Quick way to drop the stock classes or races!
13.Skill Recipes now have components, on MUDGrinder and Command Line
# Build 5.7.3 Release 7/14/2011
1. **** Database Schema Changes Were Made **** Make sure you follow the Installation Guide to upgrade your database. 
2. NAWS fully implemented now.. most charts and lists will now resize themselves to fit.  LINEWRAP now applies mostly to defaults.
3. New Property: Prop_Socials -- for making socials contextually available (with items, in rooms, etc)
4. Generic Languages can now be created online and within the MUDGrinder.  See Builders Guide.
5. Generic Crafting Skills can now be created online and within the MUDGrinder. See Builders Guide.  
6. All-Qualifys list can now be modified from MUDGrinder and Command Line. See Builders Guide.
7. Channels definition in coffeemud.ini file can now include override color codes for each channel.
8. Numerous random bugs fixed, with special thanks to frugality200
# Build 5.7.? Release ?/??/2011
1. New coffeemud.ini entries: MINSESSIONTHREADS, MAXSESSIONTHREADS for managing player I/O thread usage.
2. Converted Siplet Applet in the default web site to an ajax-based http macro.  Damn you browser security for killing my applet!