@@ -87,6 +87,7 @@ public class Fighter extends StdCharClass
 		CMLib.ableMapper().addCharAbilityMapping(ID(),5,"Fighter_Rescue",true);
 		
 		CMLib.ableMapper().addCharAbilityMapping(ID(),6,"Skill_Disarm",true);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),6,"Skill_Subdue",true);
 		
 		CMLib.ableMapper().addCharAbilityMapping(ID(),7,"Skill_Dodge",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),7,"Fighter_RapidShot",false);
