@@ -1123,6 +1123,20 @@ Example  : kick orc\n\r\
 The fighter uses his or her feet to deliver an extra bit of pain \
 in combat.
 
+SUBDUE=<ABILITY>\
+Usage    : SUBDUE [TARGET NAME] \n\r\
+Example  : subdue orc\n\r\
+The fighter uses finesse to avoid killing the target by making more \
+strategic hits on the target.  The actual damage will be minimal, \
+but in reality the fighters damage will count towards subdueing damage. \
+If carried through to the end, it will end up knocking the target \
+cold instead of killing them.  Dueing combat, a smart fighter can \
+examine his or her target and tell how close they are to being \
+fully subdued despite the apparant actual damage done.  Once knocked 
+out, the target can not be killed until consciousness is regained.\n\r\
+\n\r\
+Enter SUBDUE again to cancel this effect.
+
 DRUID_KNOWPLANTS=KNOW_PLANTS
 KNOWPLANTS=KNOW_PLANTS
 KNOWPLANT=KNOW_PLANTS
