@@ -2337,3 +2337,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 # Build 5.7.? Release ?/??/2011
 1. New coffeemud.ini entries: MINSESSIONTHREADS, MAXSESSIONTHREADS for managing player I/O thread usage.
 2. Converted Siplet Applet in the default web site to an ajax-based http macro.  Damn you browser security for killing my applet!
+3. New Fighter skill: Subdue
+
